--- a/app/assets/stylesheets/undecimo/style.css
+++ b/app/assets/stylesheets/undecimo/style.css
@@ -15,8 +15,8 @@
 =================================================================== */
 @import url("social-icons.css");			/* Social Icons */
 @import url("fancybox.css");				/* Fancybox */
-@import url("font-awesome.min.css");		/* Font Awesome*/
-@import url("font-awesome-ie7.min.css");	/* Font Awesome*/
+@import url("font-awesome.css");		/* Font Awesome*/
+@import url("font-awesome-ie7.css");	/* Font Awesome*/
 @import url("glyphicons.css");				/* Glyphicons SVG & Font */
 @import url("halflings.css");				/* Glyphicons Halflings SVG & Font */
 
