--- a/app/assets/stylesheets/application-ie.css
+++ b/app/assets/stylesheets/application-ie.css
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require_tree ./base
+ *= require font-awesome-ie7.min
  *= require_tree ./undecimo
  *= require ./undecimo-ie/styleIE
  */
